--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
+    /* 残りクラブの文字を限界まで大きく */
+#shota-remaining-clubs {
+    font-size: 40px !important; 
+    font-weight: 900 !important;
+    color: yellow;
+    text-align: center;
+}
+
+/* ⚙️を右上に移動 */
+.settings-icon {
+    position: absolute !important;
+    top: 5px !important;
+    right: 5px !important;
+    left: auto !important;
+}
     /* 全体設定：操作ミスを防ぐ */
     * { touch-action: none; user-select: none; -webkit-user-select: none; }
     input, select, #total-val { touch-action: auto !important; user-select: auto !important; -webkit-user-select: auto !important; }
@@ -167,6 +182,7 @@ function resetAll() {
 }
 
 buildSettings();
+
 </script>
 </body>
 </html>
