--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<html> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Macky Golf</title> <style> body { margin: 0; background: white; font-family: sans-serif; } .gear { position: absolute; top: 30px; right: 20px; font-size: 40px; } .text { font-size: 80px; font-weight: bold; text-align: center; margin-top: 150px; color: black; } </style> </head> <body> <div class="gear">⚙️</div> <div class="text">SHOTA</div> </body> </html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Macky Golf System</title>
+    <style>
+        body { margin: 0; background-color: #000; color: #fff; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; }
+        .settings-icon { position: absolute; top: 20px; right: 20px; font-size: 35px; }
+        .main { text-align: center; }
+        .name { font-size: 50px; }
+        .count { font-size: 150px; color: yellow; font-weight: 900; }
+        .shot-btn { width: 160px; height: 160px; border-radius: 50%; background-color: #28a745; color: white; border: none; font-size: 28px; font-weight: bold; margin-top: 20px; }
+    </style>
+</head>
+<body>
+    <div class="settings-icon">⚙️</div>
+    <div class="main">
+        <div class="name">SHOTA</div>
+        <div class="count">14</div>
+        <button class="shot-btn">SHOT</button>
+    </div>
+</body>
+</html>
