--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
     .cockpit {
       position: relative; width: 100vw; height: 100vh;
       background: radial-gradient(circle, #1a1a1a 60%, #333 95%, #000 100%);
-      display: flex; flex-direction: column; align-items: center; justify-content: space-around;
-      padding: 5% 10%; box-sizing: border-box;
+      display: flex; flex-direction: column; align-items: center; justify-content: space-between; /* 均等から調整 */
+      padding: 10% 10% 15% 10%; /* 下側の余白を15%に増やして全体を上に */
+      box-sizing: border-box;
     }
 
     .label { font-size: 11px; color: #888; letter-spacing: 2px; }
     #remaining { font-size: 80px; font-weight: bold; color: #ff4444; line-height: 1; }
     #total-val { font-size: 26px; color: #28a745; border-bottom: 2px dashed #28a745; cursor: pointer; }
-    #drive { font-size: 38px; font-weight: bold; color: #fff; }
+    #drive { font-size: 38px; font-weight: bold; color: #fff; margin-bottom: 10px; }
 
     .btn-row { display: flex; align-items: center; gap: 20px; width: 100%; justify-content: center; }
     
@@ -62,8 +63,8 @@
     input.club-dist { background: #000; color: #28a745; border: 1px solid #444; padding: 10px; width: 70px; text-align: center; border-radius: 4px; font-size: 16px; font-weight: bold; }
     .close-btn { margin: 15px 0 25px; padding: 12px 30px; background: #28a745; border: none; color: white; border-radius: 25px; font-weight: bold; }
 
-    /* バージョン表記用 */
-    .version-tag { position: absolute; bottom: 5px; right: 10px; font-size: 9px; color: #444; pointer-events: none; }
+    /* バージョン表記用：色を少し明るく、位置を少し上に */
+    .version-tag { position: absolute; bottom: 15px; right: 15px; font-size: 10px; color: #666; pointer-events: none; }
   </style>
 </head>
 <body>
@@ -84,7 +85,7 @@
     <div id="drive">000</div>
   </div>
   <div class="settings-icon" onclick="toggleSettings()">⚙️</div>
-  <div class="version-tag">Ver 1.0.2 - Macky Edition</div>
+  <div class="version-tag">Ver 1.0.3 - Macky Edition</div>
 </div>
 
 <div id="settings-panel">
